# noos-terraform

./: .gitignore  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
src/noos_tf/: __init__.py  api.py  cli.py  client.py
src/terraform_client/: api.py
src/tests/: test_api.py  test_cli.py  test_client.py
src/tests/test_base/: test_auth.py  test_http.py
