[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
# Description
name = "noos-tf"
version = "0.0.9"
description = "HashiCorp Terraform Cloud API client"
# Credentials
license = "MIT"
authors = ["Noos Energy <contact@noos.energy>"]
homepage = "https://github.com/noosenergy/noos-terraform"
# Package data
readme = "README.md"
packages = [
    { include = "noos_tf", from = "src" },
]
# Distribution
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.scripts]
noostf = "noos_tf.cli:main.run"

[tool.poetry.dependencies]
python = "^3.12"
invoke = "*"
noos-pyk = "*"

[tool.poetry.dev-dependencies]
# Linter
ruff = "*"
mypy = "*"
# Testing
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
# Debugging
ipdb = "*"
ipython = "*"

[tool.ruff]
line-length = 99
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Pydocstyle
    "F405", "W391", # Flake8
]
select = ["E"]

[tool.ruff.lint.isort]
lines-after-imports = 2
default-section = "third-party"
known-first-party = ["noos_pyk", "noos_tf", "tests"]
section-order = ["standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10 # Nearly replacement for flake8 max-complexity

[tool.mypy]
install_types = true
non_interactive = true
incremental = true
warn_unused_configs = false
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_*"
filterwarnings = "error::RuntimeWarning"
pythonpath = ["src"]
junit_family = "xunit2"
addopts = "--junitxml=.pytest_results/junit.xml"

[tool.coverage.run]
source = "noos_tf/*"
